--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     <header>
       <div class="brand">
         <h1>Blog assignatura EA - G1 - Quadrimestre de Primavera Curs 2025-26</h1>
-        <p><strong>EETAC · UPC</strong> — Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p><strong>EETAC · UPC</strong> —  Blog on anirem compartint el nostre progrés dins l'assignatura EA</p>
       </div>
       <nav aria-label="Navegació principal">
         <a class="pill" href="#inici"><strong>Inici</strong></a>
